#4 create ProductService tests

--- a/pom.xml
+++ b/pom.xml
@@ -199,9 +199,8 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
-                            <suppressionsFileExpression>
-</suppressionsFileExpression>
-                            <suppressionsLocation></suppressionsLocation>
+                            <suppressionsFileExpression></suppressionsFileExpression>
+                            <suppressionsLocation/>
                         </configuration>
                     </execution>
                 </executions>
